--- a/frontend/src/output.css
+++ b/frontend/src/output.css
@@ -969,6 +969,14 @@ select {
   margin-top: auto;
 }
 
+.mr-3 {
+  margin-right: 0.75rem;
+}
+
+.mr-4 {
+  margin-right: 1rem;
+}
+
 .block {
   display: block;
 }
@@ -1075,6 +1083,22 @@ select {
   max-height: 600px;
 }
 
+.max-h-\[50px\] {
+  max-height: 50px;
+}
+
+.max-h-\[80px\] {
+  max-height: 80px;
+}
+
+.max-h-\[40px\] {
+  max-height: 40px;
+}
+
+.max-h-\[45px\] {
+  max-height: 45px;
+}
+
 .min-h-full {
   min-height: 100%;
 }
@@ -1157,6 +1181,18 @@ select {
 
 .max-w-96 {
   max-width: 24rem;
+}
+
+.max-w-\[20px\] {
+  max-width: 20px;
+}
+
+.max-w-\[100px\] {
+  max-width: 100px;
+}
+
+.max-w-\[80px\] {
+  max-width: 80px;
 }
 
 .flex-1 {
@@ -1750,6 +1786,10 @@ select {
 .placeholder\:text-gray-400::placeholder {
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
+}
+
+.hover\:cursor-pointer:hover {
+  cursor: pointer;
 }
 
 .hover\:border-\[\#e4627d\]:hover {
