--- a/frontend/src/output.css
+++ b/frontend/src/output.css
@@ -897,6 +897,10 @@ select {
   top: 0.25rem;
 }
 
+.left-0 {
+  left: 0px;
+}
+
 .top-0 {
   top: 0px;
 }
@@ -1071,6 +1075,10 @@ select {
   height: auto;
 }
 
+.h-full {
+  height: 100%;
+}
+
 .max-h-48 {
   max-height: 12rem;
 }
@@ -1117,6 +1125,10 @@ select {
 
 .w-screen {
   width: 100vw;
+}
+
+.w-6 {
+  width: 1.5rem;
 }
 
 .min-w-0 {
@@ -1187,10 +1199,6 @@ select {
 
 .cursor-move {
   cursor: move;
-}
-
-.cursor-se-resize {
-  cursor: se-resize;
 }
 
 .grid-cols-1 {
@@ -1373,11 +1381,6 @@ select {
 .bg-yellow-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(254 249 195 / var(--tw-bg-opacity));
-}
-
-.bg-black {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-75 {
@@ -1627,21 +1630,6 @@ select {
 .text-yellow-700 {
   --tw-text-opacity: 1;
   color: rgb(161 98 7 / var(--tw-text-opacity));
-}
-
-.text-\[\#008000\] {
-  --tw-text-opacity: 1;
-  color: rgb(0 128 0 / var(--tw-text-opacity));
-}
-
-.text-\[\#FFFFFF\] {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-\[\#AA4A44\] {
-  --tw-text-opacity: 1;
-  color: rgb(170 74 68 / var(--tw-text-opacity));
 }
 
 .opacity-50 {
