--- a/frontend/src/output.css
+++ b/frontend/src/output.css
@@ -1079,6 +1079,10 @@ select {
   height: 100%;
 }
 
+.h-0 {
+  height: 0px;
+}
+
 .max-h-48 {
   max-height: 12rem;
 }
@@ -1199,6 +1203,18 @@ select {
 
 .cursor-move {
   cursor: move;
+}
+
+.cursor-nw-resize {
+  cursor: nw-resize;
+}
+
+.cursor-se-resize {
+  cursor: se-resize;
+}
+
+.cursor-sw-resize {
+  cursor: sw-resize;
 }
 
 .grid-cols-1 {
@@ -1383,8 +1399,23 @@ select {
   background-color: rgb(254 249 195 / var(--tw-bg-opacity));
 }
 
+.bg-pink-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(252 231 243 / var(--tw-bg-opacity));
+}
+
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
 .bg-opacity-75 {
   --tw-bg-opacity: 0.75;
+}
+
+.object-contain {
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 .object-cover {
@@ -1481,6 +1512,10 @@ select {
 
 .pt-5 {
   padding-top: 1.25rem;
+}
+
+.pb-56 {
+  padding-bottom: 14rem;
 }
 
 .text-left {
@@ -1630,6 +1665,11 @@ select {
 .text-yellow-700 {
   --tw-text-opacity: 1;
   color: rgb(161 98 7 / var(--tw-text-opacity));
+}
+
+.text-pink-100 {
+  --tw-text-opacity: 1;
+  color: rgb(252 231 243 / var(--tw-text-opacity));
 }
 
 .opacity-50 {
